{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 291,
  "lineage": "a1512239-7a5f-e215-42d7-7b2f710de9dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Mgmt-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-092fed0cbb20e824e",
            "owner_id": "978287688142",
            "tags": {
              "Name": "Mgmt-IGW"
            },
            "vpc_id": "vpc-0f98c27dd4ddc3eb0"
          },
          "depends_on": [
            "aws_vpc.Mgmt-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Prod-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-01a629d608f2192e8",
            "owner_id": "978287688142",
            "tags": {
              "Name": "Prod-IGW"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_vpc.Prd-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Mgmt-PublicRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05d12868293a4376b",
            "owner_id": "978287688142",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-092fed0cbb20e824e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-09afda937d7ccd02c"
              }
            ],
            "tags": {
              "Name": "Mgmt-PublicRouteTable"
            },
            "vpc_id": "vpc-0f98c27dd4ddc3eb0"
          },
          "depends_on": [
            "aws_internet_gateway.Mgmt-IGW",
            "aws_vpc.Mgmt-VPC",
            "aws_vpc_peering_connection.peermgtprd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod-PrivateRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08c79b4a62916cdb2",
            "owner_id": "978287688142",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a629d608f2192e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-09afda937d7ccd02c"
              }
            ],
            "tags": {
              "Name": "Prod-PrivateRouteTable"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_internet_gateway.Prod-IGW",
            "aws_vpc.Prd-VPC",
            "aws_vpc_peering_connection.peermgtprd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod-PublicRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f63bd600ec8f305e",
            "owner_id": "978287688142",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a629d608f2192e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-09afda937d7ccd02c"
              }
            ],
            "tags": {
              "Name": "Prod-PublicRouteTable"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_internet_gateway.Prod-IGW",
            "aws_vpc.Prd-VPC",
            "aws_vpc_peering_connection.peermgtprd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Mgmt-RouteTableAssociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005daf033ca58396d",
            "route_table_id": "rtb-05d12868293a4376b",
            "subnet_id": "subnet-08d71d3ef84fe48f4"
          },
          "depends_on": [
            "aws_route_table.Mgmt-PublicRouteTable",
            "aws_subnet.Mgmt-Subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Prod-RouteTableAssociatio-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ee8655fdf382711",
            "route_table_id": "rtb-0f63bd600ec8f305e",
            "subnet_id": "subnet-07b48a3ddd21c54fb"
          },
          "depends_on": [
            "aws_route_table.Prod-PublicRouteTable",
            "aws_subnet.Prd-Subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Prod-RouteTableAssociation-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014333a8b828ae9c3",
            "route_table_id": "rtb-0f63bd600ec8f305e",
            "subnet_id": "subnet-067e86ba8bc8125a8"
          },
          "depends_on": [
            "aws_route_table.Prod-PublicRouteTable",
            "aws_subnet.Prd-Subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pvt-RouteTableAssociation-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1b36de75554c8c",
            "route_table_id": "rtb-08c79b4a62916cdb2",
            "subnet_id": "subnet-083f4b19ff8733c0c"
          },
          "depends_on": [
            "aws_route_table.Prod-PrivateRouteTable",
            "aws_subnet.Prd-Subnet-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pvt-RouteTableAssociation-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a34756de1f2925b4",
            "route_table_id": "rtb-08c79b4a62916cdb2",
            "subnet_id": "subnet-03ab95329588cd9bd"
          },
          "depends_on": [
            "aws_route_table.Prod-PrivateRouteTable",
            "aws_subnet.Prd-Subnet-4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Alb-SecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:security-group/sg-0d83c9eac16a9fefe",
            "description": "Allow incoming connections from Internet and RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d83c9eac16a9fefe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Alb-SecurityGroup",
            "name_prefix": null,
            "owner_id": "978287688142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Alb-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-02522e78"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MgmtSecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:security-group/sg-086cd7f505d855f19",
            "description": "Allow incoming connections from Internet and RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086cd7f505d855f19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MgmtSecurityGroup",
            "name_prefix": null,
            "owner_id": "978287688142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MgmtSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-02522e78"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ProdSecurityGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:security-group/sg-00dd69dd015273f8a",
            "description": "Allow incoming connections from Internet and RDP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00dd69dd015273f8a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086cd7f505d855f19"
                ],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d83c9eac16a9fefe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ProdSecurityGroup",
            "name_prefix": null,
            "owner_id": "978287688142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ProdSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-02522e78"
          },
          "depends_on": [
            "aws_security_group.Alb-SecurityGroup",
            "aws_security_group.MgmtSecurityGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Mgmt-Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:subnet/subnet-08d71d3ef84fe48f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08d71d3ef84fe48f4",
            "map_public_ip_on_launch": false,
            "owner_id": "978287688142",
            "tags": {
              "Name": "Mgmt-Public-Subnet-1"
            },
            "vpc_id": "vpc-0f98c27dd4ddc3eb0"
          },
          "depends_on": [
            "aws_vpc.Mgmt-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prd-Subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:subnet/subnet-067e86ba8bc8125a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-067e86ba8bc8125a8",
            "map_public_ip_on_launch": false,
            "owner_id": "978287688142",
            "tags": {
              "Name": "Prod-Public-Subnet-1"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_vpc.Prd-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prd-Subnet-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:subnet/subnet-07b48a3ddd21c54fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-07b48a3ddd21c54fb",
            "map_public_ip_on_launch": false,
            "owner_id": "978287688142",
            "tags": {
              "Name": "Prod-Public-Subnet2"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_vpc.Prd-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prd-Subnet-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:subnet/subnet-083f4b19ff8733c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-083f4b19ff8733c0c",
            "map_public_ip_on_launch": false,
            "owner_id": "978287688142",
            "tags": {
              "Name": "Prod-Private-Subnet1"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_vpc.Prd-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Prd-Subnet-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:subnet/subnet-03ab95329588cd9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.4.0/24",
            "id": "subnet-03ab95329588cd9bd",
            "map_public_ip_on_launch": false,
            "owner_id": "978287688142",
            "tags": {
              "Name": "Prod-Private-Subnet2"
            },
            "vpc_id": "vpc-05f12da84889b060a"
          },
          "depends_on": [
            "aws_vpc.Prd-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Mgmt-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:vpc/vpc-0f98c27dd4ddc3eb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0665691ac3cdde655",
            "default_route_table_id": "rtb-0f9e2c665ceb2648f",
            "default_security_group_id": "sg-0045cc62d6acd6f04",
            "dhcp_options_id": "dopt-c1637aba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f98c27dd4ddc3eb0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9e2c665ceb2648f",
            "owner_id": "978287688142",
            "tags": {
              "Name": "Management-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prd-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978287688142:vpc/vpc-05f12da84889b060a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a0023c7e6f530473",
            "default_route_table_id": "rtb-099057544652988b8",
            "default_security_group_id": "sg-09731b94d93985c97",
            "dhcp_options_id": "dopt-c1637aba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05f12da84889b060a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-099057544652988b8",
            "owner_id": "978287688142",
            "tags": {
              "Name": "Production-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peermgtprd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-09afda937d7ccd02c",
            "peer_owner_id": "978287688142",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-05f12da84889b060a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "peermgtprd",
              "Side": "Requester"
            },
            "vpc_id": "vpc-0f98c27dd4ddc3eb0"
          },
          "depends_on": [
            "aws_vpc.Mgmt-VPC",
            "aws_vpc.Prd-VPC",
            "data.aws_caller_identity.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09afda937d7ccd02c",
            "peer_owner_id": "978287688142",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-05f12da84889b060a",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "peermgtprd",
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0f98c27dd4ddc3eb0",
            "vpc_peering_connection_id": "pcx-09afda937d7ccd02c"
          },
          "depends_on": [
            "aws_vpc_peering_connection.peermgtprd"
          ]
        }
      ]
    }
  ]
}